tests/neg/enum-repeated-4470.scala
object RepeatedEnum {

  enum Maybe { // error // error
    case Foo
  }

  enum Maybe { // error
    case Foo
  }
}
